--- a/src/App.css
+++ b/src/App.css
@@ -21,26 +21,24 @@ body {
     color: var(--text-primary);
     margin: 0;
     padding: 0;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.5s ease;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    max-width: 1440px;
-    margin: 0 auto;
-    /* padding: 20px; */
 }
 
 /* navbar */
-.navbar {
+.nav-content {
     width: 100%;
     position: fixed;
     /* keeps it on screen while scrolling */
     left: 0;
     top: 0;
-    background-color: var(--card-bg);
+    /* background-color: var(--card-bg); */
+    background-color: rgba(26, 28, 58, 0.5);
     border-right: 1px solid var(--border-color);
     display: flex;
     justify-content: space-between;
@@ -72,7 +70,7 @@ body {
 .nav-links a {
     color: var(--text-secondary);
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 800;
     padding: 1rem;
     border-radius: 8px;
@@ -117,21 +115,26 @@ body {
 }
 
 .main-content {
-  flex: 1;
-  padding: 40px;
+    flex: 1;
 }
 
 /* intro */
-.intro {
+.hero-section {
     text-align: center;
-    padding: 100px 0;
+    padding: 14rem 0 10rem 0;
     /* background-color: #f4f4f4; */
     /* border-radius: 12px; */
     margin-bottom: 0px;
+    background-image:
+        linear-gradient(rgba(15, 23, 42, 0.7), rgba(15, 23, 42, 0.8)),
+        url('/src/assets/hero_background.jpg');
+    background-size: cover;
+    background-position: 50% center;
+    overflow: hidden;
 }
 
-.intro h1 {
-    margin-bottom: 10px;
+.hero-section h1 {
+    margin-bottom: .75rem;
 }
 
 h1 {
@@ -139,17 +142,21 @@ h1 {
 }
 
 .featured-projects {
-    margin-bottom: 3rem;
+    padding: 6rem 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.featured-projects h1 {
+    padding-bottom: 2rem;
 }
 
 .grid {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .card {
@@ -170,7 +177,7 @@ h1 {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    height: 300px;
+    height: 256px;
     width: 100%;
     object-fit: cover;
     border-top-left-radius: 12px;
@@ -206,10 +213,10 @@ h1 {
 }
 
 .footer-section {
-    height: 10rem;
     padding-top: 2.5rem;
-    padding-left: 3.5rem;
-    margin-bottom: 3.5rem;
+    padding-left: 2rem;
+    padding-bottom: 4rem;
+    margin: 0rem 3rem;
     border-top: 1px solid var(--border-color);
     display: flex;
     flex-direction: column;
