--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,14 @@ body {
     transition: background-color 0.5s ease;
 }
 
+h1 {
+    font-size: 3rem;
+}
+
+a {
+    text-decoration: none;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -44,29 +52,6 @@ body {
 
 .main-content {
     flex: 1;
-}
-
-/* intro */
-.hero-section {
-    text-align: center;
-    padding: 14rem 0 10rem 0;
-    /* background-color: #f4f4f4; */
-    /* border-radius: 12px; */
-    margin-bottom: 0px;
-    background-image:
-        linear-gradient(rgba(15, 23, 42, 0.7), rgba(15, 23, 42, 0.8)),
-        url('/src/assets/hero_background.jpg');
-    background-size: cover;
-    background-position: 50% center;
-    overflow: hidden;
-}
-
-.hero-section h1 {
-    margin-bottom: .75rem;
-}
-
-h1 {
-    font-size: 3rem;
 }
 
 .featured-projects {
