--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -75,31 +75,50 @@
 
 .card-content {
     background-color: var(--card-bg);
-    padding: 20px;
+    padding: 1rem 1.25rem 2rem 1.25rem;
     border-bottom-left-radius: inherit;
     border-bottom-right-radius: inherit;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
 }
 
 .card-content h3 {
     color: var(--text-primary);
 }
 
-.card-content p {
-    color: var(--text-primary);
+.tech-stack {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-bottom: 0.25rem;
 }
 
 .tag {
     background: var(--border-color);
-    color: var(--text-secondary);
-    padding: 4px 8px;
-    border-radius: 4px;
+    color: var(--text-link-hover);
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
     font-size: 0.8rem;
-    margin-right: 5px;
 }
 
-.tech-stack {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    margin: 10px 0;
+.card-content p {
+    color: var(--text-primary);
+    font-size: 0.9rem;
+    line-height: 1.3;
+    margin-bottom: 0.75rem;
+}
+
+.card-links a {
+    color: var(--text-link);
+    padding: 0.5rem 1rem;
+    background-color: var(--card-bg);
+    border-color: var(--border-color);
+    border: 1px solid;
+    border-radius: 1rem;
+}
+
+.card-links a:hover {
+    color: var(--text-link-hover);
+    transition: 0.2s;
 }
